# image

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  makefile
include/: Image.h  diffusion_kernel.h  dithering.h  error_diffusion.h
src/: Image.cpp  Image.h  dithering.cpp  dithering.h  error_diffusion.cpp  error_diffusion.h  main.cpp
